--- a/projetos.html
+++ b/projetos.html
@@ -88,6 +88,9 @@
       .card-body {
         background-color: whitesmoke;
       }
+      .bg-purple {
+        background-color: #6834cf;
+      }
     </style>
 </head>
 <body class="d-flex flex-column h-100 text-center text-bg-dark">
@@ -102,58 +105,70 @@
   <a href="https://api.whatsapp.com/send?phone=5533984238958" class="icon-link icon-link-hover mb-5" id="whatsapp"><i class="bi bi-whatsapp text-white fs-6"></i></a>
 </div>
       </header>
-
-  <!-- Início do conteúdo -->
+<!-- Início do conteúdo -->
 <main class="mt-5">
-    <div class="container mt-5">
-      <div class="row">
-        <div class="col">
-          <div class="card border-0">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="img/print1.png" height="250px" alt=""></svg>
-            <div class="card-body border-top">
-              <small class="text-body-secondary text-center">Portfólio</small>
-              <br />
-              <br />
-              <p class="card-text">Meu site pessoal, esse mesmo que está vendo, onde eu me apresento e mostro meu trabalho! </p>
-              <div class="d-flex justify-content-between align-items-center">
-
+  <div class="container mt-5">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card border-0 ">
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="img/print1.png" height="250px" alt=""></svg>
+          <div class="card-body border-top">
+            <small class="text-body-secondary text-center">Portfólio</small>
+            <br />
+            <br />
+            <p class="card-text">Meu site pessoal, esse mesmo que está vendo, onde eu me apresento e mostro meu trabalho! </p>
+            <div class="d-flex justify-content-center ">
+              <div class="bg-danger rounded-2 p-1 m-2">HTML</div>
+              <div class="bg-info rounded-2 p-1 m-2">CSS</div>
+              <div class="bg-warning rounded-2 p-1 m-2">JavaScript</div>
+              <div class="bg-purple rounded-2 p-1 m-2">Bootstrap</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card border-0">
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="img/print2.png" height="250px" alt=""></svg>
+          <div class="card-body border-top">
+            <small class="text-body-secondary text-center">Elysium Style</small>
+            <br />
+            <br />
+            <p class="card-text">Uma loja virtual de moda, com uma variedade de roupas, desde casuais até peças elegantes!</p>
+            <div class="d-flex justify-content-center">
+              <div class="d-flex justify-content-center ">
+                <div class="bg-danger rounded-2 p-1 m-2">HTML</div>
+                <div class="bg-info rounded-2 p-1 m-2">CSS</div>
+                <div class="bg-warning rounded-2 p-1 m-2">JavaScript</div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card border-0">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="img/print2.png" height="250px" alt=""></svg>
-            <div class="card-body border-top">
-              <small class="text-body-secondary text-center">Elysium Style</small>
-              <br />
-              <br />
-              <p class="card-text">Uma loja virtual de moda, com uma variedade de roupas, desde casuais até peças elegantes!</p>
-              <div class="d-flex justify-content-between align-items-center">
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card border-0">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="img/print3.png" height="250px" alt=""></svg>
-            <div class="card-body border-top">
-              <small class="text-body-secondary text-center">Twiddle</small>
-              <br />
-              <br />
-              <p class="card-text border-top">Uma rede social baseada no Twitter, com sistema de conta, postagens, interações e diferentes temas!</p>
-              <div class="d-flex justify-content-between align-items-center">
-
+      </div>
+      <div class="col">
+        <div class="card border-0">
+          <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><img src="img/print3.png" height="250px" alt=""></svg>
+          <div class="card-body border-top">
+            <small class="text-body-secondary text-center">Twiddle</small>
+            <br />
+            <br />
+            <p class="card-text">Uma rede social baseada no Twitter, com sistema de conta, postagens, interações e diferentes temas!</p>
+            <div class="d-flex justify-content-center">
+              <div class="d-flex justify-content-center ">
+                <div class="bg-danger rounded-2 p-1 m-2">HTML</div>
+                <div class="bg-info rounded-2 p-1 m-2">CSS</div>
+                <div class="bg-warning rounded-2 p-1 m-2">JavaScript</div>
+                <div class="bg-primary rounded-2 p-1 m-2">PHP</div>
+                <div class="bg-secondary rounded-2 p-1 m-2">SQL</div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </main>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <!-- Fim do conteúdo -->
-
 
   <!-- Início do Footer -->
   <main class="flex-grow-1 d-flex flex-column">
