--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
       .lead {
         animation: fadeIn 1s ease-in-out;
       }
+      .btn-wpp {
+      transition: all 0.2s;
+      }
+      .btn-wpp:hover {
+      transform: scale(1.2);
+      }
     </style>
 </head>
 <body class="d-flex flex-column h-100 text-center text-bg-dark">
@@ -112,7 +118,7 @@
                 Olá! 👋 <br /> Meu nome é Jessé, tenho 15 anos e sou de Teófilo Otoni - MG.            
                 🚀 Desenvolvedor Front-end apaixonado por experiências visuais. 👨‍💻 <br /> <br />💡 Estou em busca de novos desafios.</p>
               <p class="lead">
-                  <a href="https://api.whatsapp.com/send?phone=5533984238958" class="btn btn-lg btn-light fw-bold border-white bg-white mb-5 icon-link icon-link-hover">Saiba mais</a>
+                  <a href="https://api.whatsapp.com/send?phone=5533984238958" class="btn-wpp btn btn-lg btn-light fw-bold border-white bg-white mb-5 icon-link icon-link-hover">Saiba mais</a>
               </p>
             </div>
             <div class="col-6 text-end">
