--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <div class="row featurette mt-5">
       <div class="col-md-12">
-        <h2 class="featurette-heading fw-normal lh-1 mt-5 mb-5">Experiências</h2>
+        <h2 class="featurette-heading fw-normal lh-1 mt-5 mb-5">Habilidades</h2>
         <p class="lead text-white-50 ">Linguagens e ferramentas de programação</p>
         <div class="d-flex justify-content-center align-items-center mb-5">
           <img src="img/html.png" alt="Html" class="icon">
