--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </nav>
         <div class="justify-content-end mt-1 mx-5 " id="icones">
           <a href="https://github.com/jeffzydev" class="icon-link icon-link-hover" id="github"><i class="bi bi-github text-white fs-6"></i></a>
-          <a href="https://linkedin.com/in/jessé-barbosa-moreira-129446274" class="icon-link icon-link-hover" id="linkedin"><i class="bi bi-linkedin text-white fs-6"></i></a>
+          <a href="https://www.linkedin.com/in/jesse-barbosa-moreira-129446274/" class="icon-link icon-link-hover" id="linkedin"><i class="bi bi-linkedin text-white fs-6"></i></a>
           <a href="https://api.whatsapp.com/send?phone=5533984238958" class="icon-link icon-link-hover" id="whatsapp"><i class="bi bi-whatsapp text-white fs-6"></i></a>
       </div>
       </header>
