--- a/projetos.html
+++ b/projetos.html
@@ -107,7 +107,7 @@
       </header>
 <!-- Início do conteúdo -->
 <main class="mt-5">
-  <div class="container mt-5 mb-5">
+  <div class="container my-5">
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card border-0 ">
