--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@
       </div>
       </header>
         <div class="container">
-          <div class="row mt-5">
-            <div class="col-6 my-auto">
+          <div class="row mt-5 justify-content-center">
+            <div class="col">
               <h1 class="title fw-light">Jessé Barbosa</h1>
               <h3 class="subtitle fw-bold my-4">Desenvolvedor Front-end</h3>
               <p class="lead">
                 Olá! 👋 <br /> Meu nome é Jessé, tenho 15 anos e sou de Teófilo Otoni - MG.            
-                🚀 Desenvolvedor Front-end apaixonado por experiências visuais. 👨‍💻 <br /> <br />💡 Estou em busca de novos desafios.</p>
+                🚀 Desenvolvedor Web apaixonado por experiências visuais. 👨‍💻 <br /> <br />💡 Estou em busca de novos desafios.</p>
             </div>
-            <div class="col-6 text-end">
-            <img id="photo" src="img/photo.jpg" alt="Foto de perfil">
-        </div>
+            <div class="col text-end ms-5 mb-5">
+              <img id="photo" src="img/photo.jpg" alt="Foto de perfil">
+              </div>
       </div>
     </div>
 
@@ -140,6 +140,7 @@
           <img src="img/css.png" alt="Css" class="icon">
           <img src="img/js.png" alt="JavaScript" class="icon">
           <img src="img/bootstrap.png" alt="Bootstrap" class="icon">
+          <img src="img/nodeJS.png" alt="NodeJS" class="icon">
           <img src="img/PHP.png" alt="PHP" class="icon">
           <img src="img/mysql.png" alt="MySQL" class="icon">
       </div>
