--- a/projetos.html
+++ b/projetos.html
@@ -7,44 +7,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <style>
-        /* Estilos personalizados para a responsividade */
-        @media (max-width: 768px) {
-            #icones {
-                flex-direction: column;
-                align-items: flex-end;
-            }
-            .card-body {
-                text-align: center;
-            }
-        }
-
-        @media (max-width: 576px) {
-            .nav-masthead {
-                flex-direction: column;
-                text-align: center;
-            }
-            .nav-link {
-                margin-bottom: 10px;
-            }
-        }
-
-        .card-img-top {
-            width: 100%;
-            height: auto;
-        }
-
-        .bg-danger, .bg-info, .bg-warning, .bg-primary, .bg-secondary {
-            font-size: 0.75rem;
-            padding: 0.25rem 0.5rem;
-        }
-    </style>
 </head>
 <body class="d-flex flex-column min-vh-100 bg-light">
     <header>
-        <img src="img/logo.png" height="40px" class="position-absolute mt-4" alt="">
+        <img src="img/logo.png" height="40px" class="position-absolute mt-4" alt="Logo">
         <nav class="nav nav-masthead justify-content-center mt-4">
-            <a class="link-dark fw-semibold link-offset-3 link-underline-success link-underline-opacity-0 link-underline-opacity-100-hover p-2" href="index.html">SOBRE</a>
+            <a class="link-dark fw-semibold link-offset-3 link-underline-success link-underline-opacity-0 p-2 link-underline-opacity-100-hover p-2" href="index.html">SOBRE</a>
             <a class="link-dark fw-semibold link-offset-3 link-underline-success p-2" href="projetos.html">PROJETOS</a>
         </nav>
         <div class="d-flex justify-content-end align-items-center mt-0 mx-3" id="icones">
@@ -56,109 +24,88 @@
         </div>
     </header>
     <!-- Início do conteúdo -->
-    <main class="mt-5">
-        <div class="container my-5 py-5">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <!-- Primeiros 3 Projetos -->
+    <main class="mt-5 flex-grow-1">
+        <div class="container mt-4 py-5">
+            <div class="row row-cols-1 row-cols-md-4 g-4 p-5 mx-3">
+                <!-- Projeto 1 -->
                 <div class="col">
-                    <div class="card border-0">
-                        <!-- Imagem do Projeto -->
+                    <div class="card border-0 shadow text-center">
                         <img src="img/print1.png" class="card-img-top" alt="Projeto 1">
                         <div class="card-body border-top">
-                            <!-- Título do Projeto -->
                             <small class="text-body-secondary text-center">Portfólio</small>
-                            <br /><br />
-                            <!-- Descrição do Projeto -->
-                            <p class="card-text">Meu site pessoal, esse mesmo que está vendo, onde eu me apresento e mostro meu trabalho!</p>
-                            <!-- Tecnologias do Projeto -->
-                            <div class="d-flex justify-content-center ">
-                                <div class="bg-danger rounded-2 p-1 m-2">HTML</div>
-                                <div class="bg-info rounded-2 p-1 m-2">CSS</div>
-                                <div class="bg-warning rounded-2 p-1 m-2">JavaScript</div>
-                                <div class="bg-primary rounded-2 p-1 m-2">Bootstrap</div>
+                            <p class="card-text">Meu site pessoal, onde eu me apresento e mostro meu trabalho.</p>
+                            <div class="d-flex justify-content-center">
+                                <a href="https://github.com/jeffzydev/jeffzydev.github.io">
+                                <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
+                                </a>
+                                <a href="https://jeffzydev.github.io/index.html">
+                                <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- Projeto 2 -->
                 <div class="col">
-                    <div class="card border-0">
+                    <div class="card border-0 shadow text-center">
                         <img src="img/print2.png" class="card-img-top" alt="Projeto 2">
                         <div class="card-body border-top">
                             <small class="text-body-secondary text-center">Elysium Style</small>
-                            <br /><br />
-                            <p class="card-text">Uma loja virtual de moda, com uma variedade de roupas, desde casuais até peças elegantes!</p>
+                            <p class="card-text">Uma loja virtual de moda, com uma variedade de roupas, desde casuais até peças elegantes.</p>
                             <div class="d-flex justify-content-center">
-                                <div class="bg-danger rounded-2 p-1 m-2">HTML</div>
-                                <div class="bg-info rounded-2 p-1 m-2">CSS</div>
-                                <div class="bg-warning rounded-2 p-1 m-2">JavaScript</div>
+                                <a href="https://github.com/jeffzydev/ElysiumStyle">
+                                <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
+                                </a>
+                                <a href="https://jeffzydev.github.io/ElysiumStyle/">
+                                <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
+                <!-- Projeto 3 -->
                 <div class="col">
-                    <div class="card border-0">
+                    <div class="card border-0 shadow text-center">
                         <img src="img/print4.png" class="card-img-top" alt="Projeto 3">
                         <div class="card-body border-top">
                             <small class="text-body-secondary text-center">SwiftNote</small>
-                            <br /><br />
-                            <p class="card-text">Um site de anotações rápidas, usando a função de armazenamento local do JavaScript, Ou seja, não possui um database.</p>
+                            <p class="card-text">Um site de anotações rápidas, usando a função de armazenamento local do JS.</p>
                             <div class="d-flex justify-content-center">
-                                <div class="bg-danger rounded-2 p-1 m-2">HTML</div>
-                                <div class="bg-info rounded-2 p-1 m-2">CSS</div>
-                                <div class="bg-warning rounded-2 p-1 m-2">JavaScript</div>
-                                <div class="bg-primary rounded-2 p-1 m-2">Bootstrap</div>
+                                <a href="https://github.com/jeffzydev/swiftNote">
+                                <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
+                                </a>
+                                <a href="https://jeffzydev.github.io/swiftNote/">
+                                <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Botão para Ver Mais Projetos -->
-                <div class="col-md-12 text-center mt-4">
-                    <button class="btn btn-outline-dark" id="verMaisBtn">Veja mais projetos <i class="bi bi-arrow-down-circle-fill"></i></button>
-                </div>
-            </div>
-            <!-- Seção para projetos adicionais (inicialmente oculta) -->
-            <div id="projetosAdicionais" class="d-none mt-4">
-                <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <!-- Aqui você pode adicionar mais projetos -->
-                    <div class="col">
-                        <div class="card border-0">
-                            <img src="img/print3.png" class="card-img-top" alt="Projeto 4">
-                            <div class="card-body border-top">
-                                <small class="text-body-secondary text-center">Twiddle</small>
-                                <br /><br />
-                                <p class="card-text">Uma rede social baseada no Twitter, com sistema de conta, postagens, interações e diferentes temas!</p>
-                                <div class="d-flex justify-content-center">
-                                    <div class="bg-danger rounded-2 p-1 m-2">HTML</div>
-                                    <div class="bg-info rounded-2 p-1 m-2">CSS</div>
-                                    <div class="bg-warning rounded-2 p-1 m-2">JavaScript</div>
-                                    <div class="bg-primary rounded-2 p-1 m-2">PHP</div>
-                                    <div class="bg-secondary rounded-2 p-1 m-2">SQL</div>
-                                </div>
+                <!-- Projeto 4 -->
+                <div class="col">
+                    <div class="card border-0 shadow text-center">
+                        <img src="img/print3.png" class="card-img-top" alt="Projeto 4">
+                        <div class="card-body border-top">
+                            <small class="text-body-secondary text-center">Twiddle</small>
+                            <p class="card-text">Uma rede social baseada no Twitter, com sistema de conta, postagens, e diferentes temas.</p>
+                            <div class="d-flex justify-content-center">
+                                <a href="https://github.com/jeffzydev/Twiddle">
+                                <div class="btn bg-dark rounded-0 py-0 px-2 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
     </main>
     <!-- Fim do conteúdo -->
-
     <!-- Início do Footer -->
     <footer class="mt-5 text-center text-dark fw-semibold border-bottom border-5 border-success">
         <p>Jessé Barbosa © 2024 | Todos os direitos reservados.</p>
     </footer>
     <!-- Final do Footer -->
 
-    <!-- Scripts -->
-    <script>
-    // Função para expandir os projetos ao clicar no botão
-    document.getElementById('verMaisBtn').addEventListener('click', function() {
-        document.getElementById('projetosAdicionais').classList.toggle('d-none');
-        this.innerHTML = document.getElementById('projetosAdicionais').classList.contains('d-none') ? 'Veja mais projetos <i class="bi bi-arrow-down-circle-fill"></i>' : 'Veja menos projetos <i class="bi bi-arrow-up-circle-fill"></i>';
-    });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
-/
