--- a/projetos.html
+++ b/projetos.html
@@ -35,7 +35,7 @@
                             <small class="text-body-secondary text-center">Portfólio</small>
                             <p class="card-text">Meu site pessoal, onde eu me apresento e mostro meu trabalho.</p>
                             <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jeffzydev/jeffzydev.github.io" target="_blank" rel="noopener noreferrer>
+                                <a href="https://github.com/jeffzydev/jeffzydev.github.io" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
                                 </a>
                                 <a href="https://jeffzydev.github.io/index.html" target="_blank" rel="noopener noreferrer">
