--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="d-flex justify-content-end align-items-center mt-0 mx-3" id="icones">
         <span id="copyMessage" class="copy-message">Copiado!</span>
         <a href="#" id="copyEmailButton" class="icon-link icon-link-hover"><i class="bi bi-envelope-fill text-black fs-4"></i></a>
-        <a href="https://github.com/jeffzydev" class="icon-link icon-link-hover"><i class="bi bi-github text-black fs-4"></i></a>
-        <a href="https://www.linkedin.com/in/jesse-barbosa-moreira-129446274/" class="icon-link icon-link-hover"><i class="bi bi-linkedin text-black fs-4"></i></a>
-        <a href="https://api.whatsapp.com/send?phone=5533984238958" class="icon-link icon-link-hover"><i class="bi bi-whatsapp text-black fs-4"></i></a>
+        <a href="https://github.com/jeffzydev" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-github text-black fs-4"></i></a>
+        <a href="https://www.linkedin.com/in/jesse-barbosa-moreira-129446274/" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-linkedin text-black fs-4"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=5533984238958" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-whatsapp text-black fs-4"></i></a>
       </div>
     </header>
     <main class="container flex-grow-1 mt-5">
