--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             </div>
             <div class="col-md-5 text-center text-md-end">
-                <img id="photo" src="img/photo.jpg" alt="Foto de perfil">
+                <img id="photo" src="img/foto.jpg" alt="Foto de perfil">
             </div>
         </div>
         <div class="row text-start mt-5">
