--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="d-flex flex-column min-vh-100 bg-light">
-    <header>
-      <img src="img/logo.png" height="40px" class="position-absolute mt-4" alt="">
-      <nav class="nav nav-masthead justify-content-center mt-4">
-          <a class="link-dark fw-semibold link-offset-3 link-underline-success p-2" href="index.html">SOBRE</a>
-          <a class="link-dark fw-semibold link-offset-3 link-underline-success link-underline-opacity-0 p-2 link-underline-opacity-100-hover" href="projetos.html">PROJETOS</a>
-      </nav>
-      <div class="d-flex justify-content-end align-items-center mt-0 mx-3" id="icones">
-        <span id="copyMessage" class="copy-message">Copiado!</span>
-        <a href="#" id="copyEmailButton" class="icon-link icon-link-hover"><i class="bi bi-envelope-fill text-black fs-4"></i></a>
-        <a href="https://github.com/jeffzydev" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-github text-black fs-4"></i></a>
-        <a href="https://www.linkedin.com/in/jesse-barbosa-moreira-129446274/" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-linkedin text-black fs-4"></i></a>
-        <a href="https://api.whatsapp.com/send?phone=5533984238958" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-whatsapp text-black fs-4"></i></a>
-      </div>
+    
+    <header class="container-fluid header-responsive">
+        <div class="row align-items-center">
+            <div class="col-12 col-md-4 text-center text-md-start">
+                <img src="img/logo.png" height="40px" class="mt-4" alt="">
+            </div>
+            <nav class="col-12 col-md-4 nav nav-masthead justify-content-center">
+                <a class="link-dark fw-semibold link-offset-3 link-underline-success px-2" href="index.html">SOBRE</a>
+                <a class="link-dark fw-semibold link-offset-3 link-underline-success link-underline-opacity-0 px-2 link-underline-opacity-100-hover" href="projetos.html">PROJETOS</a>
+            </nav>
+            <div class="col-12 col-md-4 d-flex justify-content-end align-items-center my-4" id="icones">
+                <span id="copyMessage" class="copy-message">Copiado!</span>
+                <a href="#" id="copyEmailButton" class="icon-link icon-link-hover"><i class="bi bi-envelope-fill text-black fs-4"></i></a>
+                <a href="https://github.com/jeffzydev" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-github text-black fs-4"></i></a>
+                <a href="https://www.linkedin.com/in/jesse-barbosa-moreira-129446274/" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-linkedin text-black fs-4"></i></a>
+                <a href="https://api.whatsapp.com/send?phone=5533984238958" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-whatsapp text-black fs-4"></i></a>
+            </div>
+        </div>
     </header>
+    
     <main class="container flex-grow-1 mt-5">
         <div class="row justify-content-center align-items-center mt-5">
             <div class="col-md-5 text-center text-md-start">
@@ -32,33 +38,29 @@
                     Tenho 15 anos e atualmente moro em Teófilo Otoni - MG. Sou um estudante apaixonado por <span class="text-success">tecnologia</span>, especialmente pelo <span class="text-success"> desenvolvimento web.</span> Minha paixão é criar <span class="text-success">experiências visuais incríveis</span> que cativem os usuários na <span class="text-success">internet.</span> 👨‍💻 
                     <br>💡 Estou constantemente buscando novos desafios e oportunidades de aprendizado para aprimorar minhas habilidades.
                 </p>
-                <div class="box justify-content-start mt-5">
-                <p class="subsubtitle fs-5 fw-bold">Trabalho com:</p>
-                <div class="d-flex justify-content-center justify-content-md-start">
-                    <img src="img/icons/html.png" alt="Html" class="icon">
-                    <img src="img/icons/css.png" alt="Css" class="icon">
-                    <img src="img/icons/js.png" alt="JavaScript" class="icon">
-                    <img src="img/icons/bootstrap.png" alt="Bootstrap" class="icon">
-                    <img src="img/icons/nodeJS.png" alt="NodeJS" class="icon">
-                    <img src="img/icons/PHP.png" alt="PHP" class="icon">
-                    <img src="img/icons/mysql.png" alt="MySQL" class="icon">
+                <div class="box justify-content-start mt-5 ">
+                    <p class="subsubtitle fs-5 fw-bold">Trabalho com:</p>
+                    <div class="d-flex justify-content-center justify-content-md-start">
+                        <img src="img/icons/html.png" alt="Html" class="icon">
+                        <img src="img/icons/css.png" alt="Css" class="icon">
+                        <img src="img/icons/js.png" alt="JavaScript" class="icon">
+                        <img src="img/icons/bootstrap.png" alt="Bootstrap" class="icon">
+                        <img src="img/icons/nodeJS.png" alt="NodeJS" class="icon">
+                        <img src="img/icons/PHP.png" alt="PHP" class="icon">
+                        <img src="img/icons/sql.png" alt="MySQL" class="icon">
+                    </div>
                 </div>
-            </div>
             </div>
             <div class="col-md-5 text-center text-md-end">
                 <img id="photo" src="img/foto.jpg" alt="Foto de perfil">
             </div>
         </div>
-        <div class="row text-start mt-5">
-            <div class="col">
-
-            </div>
-        </div>
     </main>
-    <footer class="mt-5 text-center text-dark fw-semibold border-bottom border-5 border-success">
+    <footer class="mt-4 text-center text-dark fw-semibold border-bottom border-5 border-success">
         <p>Jessé Barbosa © 2024 | Todos os direitos reservados.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
+
