--- a/projetos.html
+++ b/projetos.html
@@ -59,10 +59,10 @@
                             <small class="text-body-secondary text-center">Elysium Style</small>
                             <p class="card-text">Uma loja virtual de moda, com uma variedade de roupas, desde casuais até peças elegantes.</p>
                             <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jeffzydev/ElysiumStyle" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/jesse-barbosa/ElysiumStyle" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
                                 </a>
-                                <a href="https://jeffzydev.github.io/ElysiumStyle/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://jesse-barbosa.github.io/ElysiumStyle/" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
                                 </a>
                             </div>
@@ -77,10 +77,10 @@
                             <small class="text-body-secondary text-center">SwiftNote</small>
                             <p class="card-text">Um site de anotações rápidas, usando a função de armazenamento local do JS.</p>
                             <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jeffzydev/swiftNote" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/jesse-barbosa/swiftNote" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
                                 </a>
-                                <a href="https://jeffzydev.github.io/swiftNote/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://jesse-barbosa.github.io/swiftNote/" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
                                 </a>
                             </div>
@@ -95,7 +95,7 @@
                             <small class="text-body-secondary text-center">Twiddle</small>
                             <p class="card-text">Uma rede social baseada no Twitter, com sistema de conta, postagens, e diferentes temas.</p>
                             <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jeffzydev/Twiddle" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/jesse-barbosa/Twiddle" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-dark rounded-0 py-0 px-2 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
                                 </a>
                             </div>
