--- a/projetos.html
+++ b/projetos.html
@@ -36,16 +36,13 @@
                 <!-- Projeto 1 -->
                 <div class="col">
                     <div class="card border-0 shadow text-center">
-                        <img src="img/print1.png" class="card-img-top" alt="Projeto 1">
+                        <img src="img/print4.png" class="card-img-top" alt="Projeto 1">
                         <div class="card-body border-top">
-                            <small class="text-body-secondary text-center">Portfólio</small>
-                            <p class="card-text">Meu site pessoal, onde eu me apresento e mostro meu trabalho.</p>
+                            <small class="text-body-secondary text-center">SwiftNote</small>
+                            <p class="card-text">Meu aplicativo completo de anotações personalizadas, feito com Electron, e JavaScript para o armazenamento dos dados no dispositivo.</p>
                             <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jesse-barbosa/jesse-barbosa.github.io" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
-                                </a>
-                                <a href="https://jesse-barbosa.github.io/index.html" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
+                                <a href="https://jesse-barbosa.github.io/swiftNote/" target="_blank" rel="noopener noreferrer">
+                                <div class="btn bg-success rounded-0 py-0 px-2 m-2 text-light fw-semibold align-content-center">Conheça <i class="bi bi-box-arrow-up-right"></i></div>
                                 </a>
                             </div>
                         </div>
@@ -72,15 +69,15 @@
                 <!-- Projeto 3 -->
                 <div class="col">
                     <div class="card border-0 shadow text-center">
-                        <img src="img/print4.png" class="card-img-top" alt="Projeto 3">
+                        <img src="img/print1.png" class="card-img-top" alt="Projeto 3">
                         <div class="card-body border-top">
-                            <small class="text-body-secondary text-center">SwiftNote</small>
-                            <p class="card-text">Um site de anotações rápidas, usando a função de armazenamento local do JS.</p>
+                            <small class="text-body-secondary text-center">Portfólio</small>
+                            <p class="card-text">Meu site pessoal, onde eu me apresento e mostro meu trabalho.</p>
                             <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jesse-barbosa/swiftNote" target="_blank" rel="noopener noreferrer">
+                                <a href="https://github.com/jesse-barbosa/jesse-barbosa.github.io" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
                                 </a>
-                                <a href="https://jesse-barbosa.github.io/swiftNote/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://jesse-barbosa.github.io/index.html" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
                                 </a>
                             </div>
