--- a/projetos.html
+++ b/projetos.html
@@ -39,7 +39,7 @@
                         <img src="img/print4.png" class="card-img-top" alt="Projeto 1">
                         <div class="card-body border-top">
                             <small class="text-body-secondary text-center">SwiftNote</small>
-                            <p class="card-text">Meu aplicativo completo de anotações personalizadas, feito com Electron, e JavaScript para o armazenamento dos dados no dispositivo.</p>
+                            <p class="card-text">Meu aplicativo completo de anotações personalizadas, feito com Electron, e JavaScript para o armazenamento local</p>
                             <div class="d-flex justify-content-center">
                                 <a href="https://jesse-barbosa.github.io/swiftNote/" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-success rounded-0 py-0 px-2 m-2 text-light fw-semibold align-content-center">Conheça <i class="bi bi-box-arrow-up-right"></i></div>
