Alterando ordem dos projetos e a descrição do Notten.

--- a/projetos.html
+++ b/projetos.html
@@ -38,8 +38,8 @@
                     <div class="card border-0 shadow text-center">
                         <img src="img/print4.png" class="card-img-top" alt="Projeto 1">
                         <div class="card-body border-top">
-                            <small class="text-body-secondary text-center">SwiftNote</small>
-                            <p class="card-text">Meu aplicativo completo de anotações personalizadas, feito com Electron, e JavaScript para o armazenamento local</p>
+                            <small class="text-body-secondary text-center">Notten</small>
+                            <p class="card-text">Meu aplicativo (ainda em desenvolvimento) de desenvolvimento e prototipagem de projetos em equipe.</p>
                             <div class="d-flex justify-content-center">
                                 <a href="https://jesse-barbosa.github.io/swiftNote/" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-success rounded-0 py-0 px-2 m-2 text-light fw-semibold align-content-center">Conheça <i class="bi bi-box-arrow-up-right"></i></div>
@@ -51,24 +51,6 @@
                 <!-- Projeto 2 -->
                 <div class="col">
                     <div class="card border-0 shadow text-center">
-                        <img src="img/print2.png" class="card-img-top" alt="Projeto 2">
-                        <div class="card-body border-top">
-                            <small class="text-body-secondary text-center">Elysium Style</small>
-                            <p class="card-text">Uma loja virtual de moda, com uma variedade de roupas, desde casuais até peças elegantes.</p>
-                            <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jesse-barbosa/ElysiumStyle" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
-                                </a>
-                                <a href="https://jesse-barbosa.github.io/ElysiumStyle/" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Projeto 3 -->
-                <div class="col">
-                    <div class="card border-0 shadow text-center">
                         <img src="img/print1.png" class="card-img-top" alt="Projeto 3">
                         <div class="card-body border-top">
                             <small class="text-body-secondary text-center">Portfólio</small>
@@ -78,6 +60,24 @@
                                 <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
                                 </a>
                                 <a href="https://jesse-barbosa.github.io/index.html" target="_blank" rel="noopener noreferrer">
+                                <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Projeto 3 -->
+                <div class="col">
+                    <div class="card border-0 shadow text-center">
+                        <img src="img/print2.png" class="card-img-top" alt="Projeto 2">
+                        <div class="card-body border-top">
+                            <small class="text-body-secondary text-center">Elysium Style</small>
+                            <p class="card-text">Uma loja virtual de moda, com uma variedade de roupas, desde casuais até peças elegantes.</p>
+                            <div class="d-flex justify-content-center">
+                                <a href="https://github.com/jesse-barbosa/ElysiumStyle" target="_blank" rel="noopener noreferrer">
+                                <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
+                                </a>
+                                <a href="https://jesse-barbosa.github.io/ElysiumStyle/" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
                                 </a>
                             </div>
