--- a/projetos.html
+++ b/projetos.html
@@ -41,7 +41,7 @@
                             <small class="text-body-secondary text-center">Notten</small>
                             <p class="card-text">Meu aplicativo (ainda em desenvolvimento) de desenvolvimento e prototipagem de projetos em equipe.</p>
                             <div class="d-flex justify-content-center">
-                                <a href="https://jesse-barbosa.github.io/swiftNote/" target="_blank" rel="noopener noreferrer">
+                                <a href="https://jesse-barbosa.github.io/notten/" target="_blank" rel="noopener noreferrer">
                                 <div class="btn bg-success rounded-0 py-0 px-2 m-2 text-light fw-semibold align-content-center">Conheça <i class="bi bi-box-arrow-up-right"></i></div>
                                 </a>
                             </div>
