URL Correction and Layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-12 col-md-4 d-flex justify-content-end align-items-center my-4" id="icones">
                 <span id="copyMessage" class="copy-message">Copiado!</span>
                 <a href="#" id="copyEmailButton" class="icon-link icon-link-hover"><i class="bi bi-envelope-fill text-black fs-4"></i></a>
-                <a href="https://github.com/jeffzydev" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-github text-black fs-4"></i></a>
+                <a href="https://github.com/jesse-barbosa" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-github text-black fs-4"></i></a>
                 <a href="https://www.linkedin.com/in/jesse-barbosa-moreira-129446274/" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-linkedin text-black fs-4"></i></a>
                 <a href="https://api.whatsapp.com/send?phone=5533984238958" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-whatsapp text-black fs-4"></i></a>
             </div>
@@ -38,7 +38,7 @@
                     Tenho 15 anos e atualmente moro em Teófilo Otoni - MG. Sou um estudante apaixonado por <span class="text-success">tecnologia</span>, especialmente pelo <span class="text-success"> desenvolvimento web.</span> Minha paixão é criar <span class="text-success">experiências visuais incríveis</span> que cativem os usuários na <span class="text-success">internet.</span> 👨‍💻 
                     <br>💡 Estou constantemente buscando novos desafios e oportunidades de aprendizado para aprimorar minhas habilidades.
                 </p>
-                <div class="box justify-content-start mt-5 ">
+                <div class="justify-content-start mt-5 ">
                     <p class="subsubtitle fs-5 fw-bold">Trabalho com:</p>
                     <div class="d-flex justify-content-center justify-content-md-start">
                         <img src="img/icons/html.png" alt="Html" class="icon">
@@ -63,4 +63,3 @@
     <script src="js/script.js"></script>
 </body>
 </html>
-
