Responsive cards and URL Correction

--- a/projetos.html
+++ b/projetos.html
@@ -22,7 +22,7 @@
             <div class="col-12 col-md-4 d-flex justify-content-end align-items-center my-4" id="icones">
                 <span id="copyMessage" class="copy-message">Copiado!</span>
                 <a href="#" id="copyEmailButton" class="icon-link icon-link-hover"><i class="bi bi-envelope-fill text-black fs-4"></i></a>
-                <a href="https://github.com/jeffzydev" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-github text-black fs-4"></i></a>
+                <a href="https://github.com/jesse-barbosa" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-github text-black fs-4"></i></a>
                 <a href="https://www.linkedin.com/in/jesse-barbosa-moreira-129446274/" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-linkedin text-black fs-4"></i></a>
                 <a href="https://api.whatsapp.com/send?phone=5533984238958" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-whatsapp text-black fs-4"></i></a>
             </div>
@@ -31,18 +31,20 @@
 
     <!-- Início do conteúdo -->
     <main class="mt-5 flex-grow-1">
-        <div class="container mt-4 py-5">
-            <div class="row row-cols-1 row-cols-md-4 g-4 p-5 mx-3">
+        <div class="container py-5">
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 p-5 mx-3">
                 <!-- Projeto 1 -->
                 <div class="col">
                     <div class="card border-0 shadow text-center">
                         <img src="img/print4.png" class="card-img-top" alt="Projeto 1">
                         <div class="card-body border-top">
+                            <div class="card-text">
                             <small class="text-body-secondary text-center">Notten</small>
                             <p class="card-text">Meu aplicativo (ainda em desenvolvimento) de desenvolvimento e prototipagem de projetos em equipe.</p>
-                            <div class="d-flex justify-content-center">
-                                <a href="https://jesse-barbosa.github.io/notten/" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-success rounded-0 py-0 px-2 m-2 text-light fw-semibold align-content-center">Conheça <i class="bi bi-box-arrow-up-right"></i></div>
+                            </div>
+                            <div class="card-buttons">
+                                <a href="https://jesse-barbosa.github.io/swiftNote/" class="btn btn-success mt-2 fw-semibold" target="_blank" rel="noopener noreferrer">
+                                Conheça <i class="bi bi-box-arrow-up-right"></i>
                                 </a>
                             </div>
                         </div>
@@ -53,14 +55,16 @@
                     <div class="card border-0 shadow text-center">
                         <img src="img/print1.png" class="card-img-top" alt="Projeto 3">
                         <div class="card-body border-top">
+                            <div class="card-text">
                             <small class="text-body-secondary text-center">Portfólio</small>
                             <p class="card-text">Meu site pessoal, onde eu me apresento e mostro meu trabalho.</p>
-                            <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jesse-barbosa/jesse-barbosa.github.io" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
+                            </div>
+                            <div class="card-buttons">
+                                <a href="https://github.com/jesse-barbosa/jesse-barbosa.github.io" class="btn btn-dark fw-semibold py-0 px-1 m-2" target="_blank" rel="noopener noreferrer">
+                                Code <i class="bi bi-github text-light fs-4"></i>
                                 </a>
-                                <a href="https://jesse-barbosa.github.io/index.html" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
+                                <a href="https://jesse-barbosa.github.io/index.html" class="btn btn-success fw-semibold py-1 px-1 m-2" target="_blank" rel="noopener noreferrer">
+                                Live demo <i class="bi bi-box-arrow-up-right"></i>
                                 </a>
                             </div>
                         </div>
@@ -71,14 +75,16 @@
                     <div class="card border-0 shadow text-center">
                         <img src="img/print2.png" class="card-img-top" alt="Projeto 2">
                         <div class="card-body border-top">
+                            <div class="card-text">
                             <small class="text-body-secondary text-center">Elysium Style</small>
                             <p class="card-text">Uma loja virtual de moda, com uma variedade de roupas, desde casuais até peças elegantes.</p>
-                            <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jesse-barbosa/ElysiumStyle" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-dark rounded-0 py-0 px-1 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
+                            </div>
+                            <div class="card-buttons">
+                                <a href="https://github.com/jesse-barbosa/ElysiumStyle" class="btn btn-dark fw-semibold py-0 px-1 m-2" target="_blank" rel="noopener noreferrer">
+                                Code <i class="bi bi-github text-light fs-4"></i>
                                 </a>
-                                <a href="https://jesse-barbosa.github.io/ElysiumStyle/" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-success rounded-0 py-1 px-1 m-2 text-light fw-semibold align-content-center">Live demo <i class="bi bi-box-arrow-up-right"></i></div>
+                                <a href="https://jesse-barbosa.github.io/ElysiumStyle/" class="btn btn-success fw-semibold py-1 px-1 m-2" target="_blank" rel="noopener noreferrer">
+                                Live demo <i class="bi bi-box-arrow-up-right"></i>
                                 </a>
                             </div>
                         </div>
@@ -89,16 +95,20 @@
                     <div class="card border-0 shadow text-center">
                         <img src="img/print3.png" class="card-img-top" alt="Projeto 4">
                         <div class="card-body border-top">
+                            <div class="card-text">
                             <small class="text-body-secondary text-center">Twiddle</small>
                             <p class="card-text">Uma rede social baseada no Twitter, com sistema de conta, postagens, e diferentes temas.</p>
-                            <div class="d-flex justify-content-center">
-                                <a href="https://github.com/jesse-barbosa/Twiddle" target="_blank" rel="noopener noreferrer">
-                                <div class="btn bg-dark rounded-0 py-0 px-2 m-2 text-light fw-semibold align-content-center">Code <i class="bi bi-github text-light fs-4"></i></div>
+                            </div>
+                            <div class="card-buttons">
+                                <a href="https://github.com/jesse-barbosa/Twiddle" class="btn btn-dark fw-semibold py-0 px-1 m-2" target="_blank" rel="noopener noreferrer">
+                                Code <i class="bi bi-github text-light fs-4"></i>
                                 </a>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
     </main>
     <!-- Fim do conteúdo -->
     <!-- Início do Footer -->
