--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="d-flex flex-column min-vh-100 bg-light">
-    
     <header class="container-fluid header-responsive">
         <div class="row align-items-center">
             <div class="col-12 col-md-4 text-center text-md-start">
@@ -19,7 +18,7 @@
                 <a class="link-dark fw-semibold link-offset-3 link-underline-success px-2" href="index.html">SOBRE</a>
                 <a class="link-dark fw-semibold link-offset-3 link-underline-success link-underline-opacity-0 px-2 link-underline-opacity-100-hover" href="projetos.html">PROJETOS</a>
             </nav>
-            <div class="col-12 col-md-4 d-flex justify-content-end align-items-center my-4" id="icones">
+            <div class="icones col-12 col-md-4 d-flex justify-content-end align-items-center my-4">
                 <span id="copyMessage" class="copy-message">Copiado!</span>
                 <a href="#" id="copyEmailButton" class="icon-link icon-link-hover"><i class="bi bi-envelope-fill text-black fs-4"></i></a>
                 <a href="https://github.com/jesse-barbosa" target="_blank" rel="noopener noreferrer" class="icon-link icon-link-hover"><i class="bi bi-github text-black fs-4"></i></a>
@@ -28,7 +27,6 @@
             </div>
         </div>
     </header>
-    
     <main class="container flex-grow-1 mt-5">
         <div class="row justify-content-center align-items-center mt-5">
             <div class="col-md-5 text-center text-md-start">
@@ -52,7 +50,7 @@
                 </div>
             </div>
             <div class="col-md-5 text-center text-md-end">
-                <img id="photo" src="img/foto.jpg" alt="Foto de perfil">
+                <img class="photo" src="img/foto.jpg" alt="Foto de perfil">
             </div>
         </div>
     </main>
@@ -63,3 +61,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
